--- a/DND/DND.csproj
+++ b/DND/DND.csproj
@@ -274,6 +274,8 @@
     <Content Include="apple-touch-icon-72x72.png" />
     <Content Include="apple-touch-icon-76x76.png" />
     <Content Include="App_Data\ffmpeg\ffmpeg.exe" />
+    <Content Include="App_Data\Help\favicon.txt" />
+    <Content Include="App_Data\Help\Notes.txt" />
     <Content Include="App_Data\Logs\delete.txt" />
     <Content Include="bower_components\amitava82-angular-multiselect\dist\multiselect-tpls.js" />
     <Content Include="bower_components\amitava82-angular-multiselect\dist\multiselect.css" />
@@ -1120,9 +1122,7 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\Uploads\" />
     <Folder Include="FileManager\tmp\" />
-    <Folder Include="font\" />
     <Folder Include="uploads\gallery\australia\" />
   </ItemGroup>
   <PropertyGroup>
