--- a/DND/Web.config
+++ b/DND/Web.config
@@ -86,6 +86,7 @@
     <add key="EmailPort" value="25" />
     <add key="EmailSsl" value="true" />
 
+    <add key="GitHubLink" value="https://github.com/davidikin45/DigitalNomadDave" />
     <add key="InstagramLink" value="http://www.instagram.com/diker45" />
     <add key="FacebookLink" value="https://www.facebook.com/david.ikin" />
     <add key="LinkedInLink" value="https://www.linkedin.com/in/david-ikin/" />
