--- a/SkyscannerSearch/SkyscannerSearch.csproj
+++ b/SkyscannerSearch/SkyscannerSearch.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.1.1\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -55,6 +58,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -65,6 +71,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -74,10 +81,167 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Content Include="Standing_Data\Skyscanner\countriesService_ar-AE.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_az-AZ.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_bg-BG.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_ca-ES.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_cs-CZ.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_da-DK.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_de-DE.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_el-GR.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_en-GB.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_en-GG.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_en-US.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_es-ES.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_es-MX.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_et-EE.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_fi-FI.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_fr-FR.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_hr-HR.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_hu-HU.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_id-ID.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_it-IT.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_ja-JP.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_ko-KR.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_lt-LT.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_lv-LV.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_ms-MY.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_nb-NO.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_nl-NL.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_pl-PL.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_pt-BR.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_pt-PT.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_ro-RO.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_ru-RU.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_sk-SK.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_sv-SE.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_th-TH.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_tl-PH.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_tr-TR.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_uk-UA.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_vi-VN.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_zh-CN.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_zh-HK.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_zh-SG.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\countriesService_zh-TW.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\currenciesService.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\geoService.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Standing_Data\Skyscanner\localesService.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DND.Core\DND.Core.csproj">
+      <Project>{1a68306e-4862-466e-a5d5-4de33887aae2}</Project>
+      <Name>DND.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DND.EFPersistance\DND.EFPersistance.csproj">
+      <Project>{ba2ec372-60e8-46e5-a1ef-cbcf2066f01c}</Project>
+      <Name>DND.EFPersistance</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DND.Services\DND.Services.csproj">
+      <Project>{7229c95e-02ce-4d4a-aff0-6baa601fe25a}</Project>
+      <Name>DND.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Solution.Base\Solution.Base.csproj">
+      <Project>{c7f28d81-8666-4dd4-a3c5-235e56c3f30b}</Project>
+      <Name>Solution.Base</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
