--- a/DND/DND.csproj
+++ b/DND/DND.csproj
@@ -289,6 +289,7 @@
     <Content Include="apple-touch-icon-76x76.png" />
     <Content Include="App_Data\ffmpeg\ffmpeg.exe" />
     <Content Include="App_Data\Help\favicon.txt" />
+    <Content Include="App_Data\Help\Git.txt" />
     <Content Include="App_Data\Help\Notes.txt" />
     <Content Include="App_Data\Logs\delete.txt" />
     <Content Include="bower_components\amitava82-angular-multiselect\dist\multiselect-tpls.js" />
