--- a/DND/Web.config
+++ b/DND/Web.config
@@ -11,7 +11,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <connectionStrings>
     <add name="DefaultStringLocalDb" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; AttachDbFilename=|DataDirectory|\DNDDB.mdf;Initial Catalog=DND;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnectionString" connectionString="Data Source=Dave; Initial Catalog=DND; Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnectionString" connectionString="Data Source=digitalnomaddave.database.windows.net; Initial Catalog=DND; User Id=digitalnomaddave; Password=12IkinIkin; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="DefaultMongoConnectionString" connectionString="mongodb://localhost" />
   </connectionStrings>
   <!--<system.net>
