Gallery name with dash

--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,4 @@ __pycache__/
 /DND/App_Data/ffmpeg/ffmpeg.exe
 DND/Web.Release.config
 /DND/uploads/gallery/australia
+/DND/uploads/gallery/australia-two
