--- a/DND/Web.config
+++ b/DND/Web.config
@@ -94,6 +94,7 @@
     <add key="InstagramLink" value="http://www.instagram.com/diker45" />
     <add key="FacebookLink" value="https://www.facebook.com/david.ikin" />
     <add key="LinkedInLink" value="https://www.linkedin.com/in/david-ikin/" />
+    <add key="YouTubeLink" value="https://www.youtube.com/channel/UC6LeM1dUmA_AmE_X3C1vHIQ/videos" />
 
     <add key="PublicUploadFolders" value="uploads/blog,uploads/gallery,uploads/carousel,uploads/bucket-list,uploads/social-media,uploads/carousel,uploads/advertisements,uploads/parellax,uploads/testimonials,uploads/projects" />
     <add key="Folder:Uploads" value="~/uploads/" />
